[package]
name = "http_query_params"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/ebithril/http_query_params"
description = "A small package to it easy to create http query params"
exclude = [".github/**"]

[lib]
proc_macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
convert_case = "0.6.0"
